--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "serve": "^10.1.2",
     "vee-validate": "^2.1.7",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2"
